 * Language and i18n:
   * updated translations: Portuguese (Brazil), Russian
 * User interface:
   * Grey game titles out when we're missing the era
 * WML Engine:
   * Increase the map size limit to 1000 by 1000
 * Miscellaneous and bug fixes:
   * Fixed bug #13204: NR: Death event doesn't re-spawn Malifor as expected
   * Fixed bug #13198: Corrupt replay in MP

Version 1.5.14:
 * Campaigns:
   * Descent into Darkness:
     * Increased the experience requirement for the Ancient Lich from 150 to 250
   * The South Guard:
     * Made Deoran not dismount in 'Into the Depths' anymore
   * Under the Burning Suns:
     * Simplified Kaleh's AMLAs to have consistent requirements and effects.
 * Graphics:
   * New portrait for the male and female Assassin, Gryphon Rider, Longbowman,
     Master Bowman, Dwarf Runemaster.
   * New variations of desert plants
 * Language and i18n:
   * updated translations: Catalan, Chinese (Simplified), Czech, Dutch, Finnish,
     German, Hebrew, Hungarian, Lithuanian, Norwegian, Polish, Russian, Slovak
   * updated DejaVuSans to 2.29
   * replaced sazanami-gothic.ttf and wqy-zenhei-gb2312.ttf with wqy-zenhei.ttc
     (version 0.8.38-1)
 * Music and sound effects:
   * Added the new music track "Siege of Laurelmor" by Doug Kaufman
 * User interface:
   * Fix an assertion failure when an unexpected mouse button was used
     (bug #13126)
   * Fixed bug #13161: Inactive weapon special name and description not used
   * Fixed bug #13123: When you're downloading add-ons they do not appear in
     the campaigns list until BfW is restarted
   * The size of the message dialogs now really depends on the size of the map
   * Started with a new layout engine for the new widgets (bug #13180)
   * Fix few bugs about selecting an unit during another unit's move
   * Fix a regression: again allow to use right-click to cancel drag&drop
 * WML Engine:
   * Increase the map size limit to 1000 by 1000
 * Miscellaneous and bug fixes: