@@ -11,6 +11,8 @@ Version 1.5.14+svn:
  * Miscellaneous and bug fixes:
    * Fixed bug #13204: NR: Death event doesn't re-spawn Malifor as expected
    * Fixed bug #13198: Corrupt replay in MP
+   * Fixed bug #13199: Map generation in mp fails when hills and size of hills 
+					   sliders are at max
 
 Version 1.5.14:
  * Campaigns:
